--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ table{
   box-shadow: 0 0 2px 0 rgba(0,0,0,.15), 0 0 4px 0 rgba(0,0,0,.2), 0 12px 12px 0 rgba(0,0,0,.15);
   transition: box-shadow .4s ease-in;
   transition: box-shadow .4s ease-out;
+  position: relative;
 }
 
 .card:hover{
@@ -123,4 +124,15 @@ table{
   width: 70px;
   border-radius: 2px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+}
+
+.righttop {
+  position: absolute;
+  right: 20px;
+}
+
+.rightbottom {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
 }
