--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@font-face {
+/*@font-face {
   font-family: 'stellar';
      src: url('fonts/stellar/stellar-bold.otf'),
           url('fonts/stellar/stellar-light.otf'),
           url('fonts/stellar/stellar-medium.otf'),
           url('fonts/stellar/stellar-regular.otf');
-}
+}*/
 @font-face {
   font-family: 'anurati';
      src: url('fonts/anurati/anurati.otf');
@@ -24,26 +24,22 @@ h1 {
   font-size: 22px;
   color: white;
 }
-h2, h3 {
-  font-family: 'stellar', 'Monserrat';
-  color: white;
+h2 {
+  font-family: 'Roboto', sans-serif;
+  color: #ccc;
 }
 h2 {
   font-size: 18px;
   font-weight: 300;
 }
-h3 {
-  font-size: 16px;
-  font-weight: 300;
-}
 p {
   text-align: justify;
-  font-family: 'stellar', 'Monserrat';
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
-  color: #ccc;
+  color: white;
 }
 a {
-  color: #ccc;
+  color: white;
   text-decoration: none;
 }
 a:hover {
@@ -65,6 +61,7 @@ table {
   height: 5vh;
   display: flex;
   align-items: center;
+  font-family: 'Roboto', sans-serif;
 }
 .list-inline {
   padding-left: 0;
