--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   -webkit-animation: AnimationName 35s ease infinite;
   animation: AnimationName 35s ease infinite;
 
-  font-family: 'stellar', 'Monserrat';
+  font-family: 'Roboto', sans-serif;
   font-size: 15px;
   line-height: 1.6em;
 }
