--- a/style.css
+++ b/style.css
@@ -55,11 +55,18 @@ a {
 a:hover {
   color: #C2FF0B;
   text-decoration: none;
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 ul {
+  list-style-type: none;
   text-decoration: none;
+}
+
+li:hover {
+  color: #C2FF0B;
+  text-decoration: none;
+  transform: scale(1.05);
 }
 
 /* First simple components */
